# Lark-chatGPT-gpt-3.5-turbo

./: Cargo.toml  README.md  config.toml  docker-compose.yml  docker_build.sh
examples/: error_parse.rs  fn_Fn.rs  load_toml.rs  parse-body.rs  request.rs  serde_enum.rs  serde_simple.rs  test.toml
src/: chatgpt.rs  feishu.rs  lib.rs  main.rs
tests/: gpt.rs  parse_json.rs  replace.rs
