[package]
name = "feishu_gptbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.7"
json = "0.12.4"
pretty_env_logger = "0.4"
log = "0.4"
clap = { version = "4.0", features = ["cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
once_cell = "1.17.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
uuid = { version = "1.3.0", features = [ "v4", "fast-rng", "macro-diagnostics" ]}
toml = "0.5.2"
